--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "profile-service",
+  "name": "auth-service",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production tsx index.ts",
-    "dev": "tsx index.ts",
-    "build": "tsc"
+    "start": "cross-env NODE_ENV=production tsx index.ts",
+    "dev": "cross-env NODE_ENV=development tsx index.ts",
+    "build": "tsc",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "type": "module",
   "keywords": [],
@@ -22,15 +23,20 @@
     "fastify": "^5.4.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.12.0",
-    "redis": "^5.6.0",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.7",
     "@types/bcrypt": "^5.0.2",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.14",
+    "@types/supertest": "^6.0.3",
+    "cross-env": "^7.0.3",
+    "jest": "^30.0.4",
+    "ts-jest": "^29.4.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
