--- a/gateway/package.json
+++ b/gateway/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production tsx index.ts",
-    "dev": "tsx index.ts",
-    "build": "tsc"
+    "start": "cross-env NODE_ENV=production tsx index.ts",
+    "dev": "cross-env NODE_ENV=development tsx index.ts",
+    "build": "tsc",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "type": "module",
   "keywords": [],
@@ -22,13 +23,21 @@
     "jsonwebtoken": "^9.0.2",
     "redis": "^5.6.0",
     "socket.io": "^4.8.1",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.14",
     "@types/socket.io": "^3.0.1",
+    "@types/supertest": "^6.0.3",
+    "cross-env": "^7.0.3",
+    "jest": "^30.0.4",
+    "socket.io-client": "^4.8.1",
+    "supertest": "^7.1.3",
+    "ts-jest": "^29.4.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
