Docker architecture for prod/dev stage. Build + Hot-reload.

--- a/gateway/.env.example
+++ b/gateway/.env.example
@@ -1,7 +1,7 @@
-PORT=3000
-JWT_SECRET=your_jwt_secret
-RABBITMQ_URL=amqp://localhost
-CLIENT_URL=http://localhost:5173
-REDIS_URL=redis://localhost:6379
-
-NODE_ENV=development
+HOST=${HOST}
+PORT=${GATEWAY_PORT}
+JWT_SECRET=${GATEWAY_JWT_SECRET}
+RABBITMQ_URL=${GATEWAY_RABBITMQ_URL}
+REDIS_URL=${GATEWAY_REDIS_URL}
+CLIENT_URL=${GATEWAY_CLIENT_URL}
+NODE_ENV=${NODE_ENV}
