--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production tsx index.ts",
-    "dev": "cross-env NODE_ENV=development tsx index.ts",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "dev": "cross-env NODE_ENV=development CHOKIDAR_USEPOLLING=true CHOKIDAR_INTERVAL=300 tsx watch index.ts",
     "build": "tsc",
     "test": "cross-env NODE_ENV=test jest"
   },
@@ -23,6 +23,7 @@
     "fastify": "^5.4.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.12.0",
+    "redis": "^5.6.0",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0",
     "zod": "^4.0.5"
