--- a/gateway/package.json
+++ b/gateway/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production tsx index.ts",
-    "dev": "cross-env NODE_ENV=development tsx index.ts",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "dev": "cross-env NODE_ENV=development CHOKIDAR_USEPOLLING=true CHOKIDAR_INTERVAL=300 tsx watch index.ts",
     "build": "tsc",
     "test": "cross-env NODE_ENV=test jest"
   },
