Add metrics, http-proxy for services, hot reload libs

--- a/auth-service/.env.example
+++ b/auth-service/.env.example
@@ -1,7 +1,8 @@
+NAME=${AUTH_APP_NAME}
 HOST=${HOST}
 PORT=${AUTH_PORT}
-JWT_SECRET=${AUTH_JWT_SECRET}
+JWT_SECRET=${JWT_SECRET}
 RABBITMQ_URL=${AUTH_RABBITMQ_URL}
 REDIS_URL=${AUTH_REDIS_URL}
-MONGO_URL=${AUTH_MONGO_URL}
 NODE_ENV=${NODE_ENV}
+METRICS_TOKEN=${METRICS_TOKEN}
