--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -72,6 +72,9 @@ services:
   redis:
     image: redis:7
     container_name: redis
+    restart: always
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
     volumes:
       - redis_data:/data
@@ -79,6 +82,12 @@ services:
       - backend
     labels:
       - "traefik.enable=false"
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli -a $REDIS_PASSWORD ping"]
+      interval: 90s
+      timeout: 30s
+      retries: 5
+      start_period: 30s
 
   rabbitmq:
     image: rabbitmq:3.13-management-alpine
@@ -97,9 +106,9 @@ services:
       - "traefik.http.routers.rabbitmq-ui.tls.certresolver=letsencrypt"
       - "traefik.http.services.rabbitmq-ui.loadbalancer.server.port=15672"
     healthcheck:
-      test: ["CMD-SHELL", 'mongosh --eval ''db.adminCommand("ping").ok'' --quiet || exit 1']
+      test: ["CMD", "rabbitmq-diagnostics", "ping"]
       interval: 10s
-      timeout: 10s
+      timeout: 5s
       retries: 10
 
   mongo:
@@ -117,10 +126,10 @@ services:
     labels:
       - "traefik.enable=false"
     healthcheck:
-      test: ["CMD", "mongo", "--quiet", "--eval", "db.adminCommand('ping')"]
-      interval: 30s
+      test: ["CMD-SHELL", 'mongosh --eval ''db.adminCommand("ping").ok'' --quiet || exit 1']
+      interval: 10s
       timeout: 10s
-      retries: 5
+      retries: 10
 
   minio:
     image: minio/minio
@@ -177,11 +186,82 @@ services:
       - "traefik.http.routers.redisinsight.tls.certresolver=letsencrypt"
       - "traefik.http.routers.redisinsight.middlewares=auth@file"
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    restart: always
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    networks:
+      - backend
+    labels:
+      - "traefik.enable=false"
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --storage.tsdb.retention.time=15d
+
+  loki:
+    image: grafana/loki
+    container_name: loki
+    restart: always
+    command: -config.file=/etc/loki/local-config.yaml
+    volumes:
+      - loki_data:/loki
+      - ./loki/local-config.yaml:/etc/loki/local-config.yaml:ro
+    networks:
+      - backend
+    labels:
+      - "traefik.enable=false"
+
+  alloy:
+    image: grafana/alloy:latest
+    container_name: alloy
+    restart: always
+    user: root
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - ./alloy/config.alloy:/etc/alloy/config.alloy:ro
+      - ./alloy/positions:/etc/alloy/positions
+    networks:
+      - backend
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.alloy-ui.rule=Host(`alloy.${DOMAIN}`)"
+      - "traefik.http.routers.alloy-ui.entrypoints=websecure"
+      - "traefik.http.routers.alloy-ui.tls.certresolver=letsencrypt"
+      - "traefik.http.services.alloy-ui.loadbalancer.server.port=12345"
+      - "traefik.http.routers.alloy-ui.middlewares=auth@file"
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    restart: always
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
+      - GF_AUTH_ANONYMOUS_ENABLED=false
+      - GF_SERVER_ROOT_URL=https://grafana.${DOMAIN}
+      - GF_USERS_ALLOW_SIGN_UP=false
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning:ro
+    networks:
+      - backend
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.grafana.rule=Host(`grafana.${DOMAIN}`)"
+      - "traefik.http.routers.grafana.entrypoints=websecure"
+      - "traefik.http.services.grafana.loadbalancer.server.port=3000"
+      - "traefik.http.routers.grafana.tls.certresolver=letsencrypt"
+
 volumes:
   mongodb_data:
   minio_data:
   rabbitmq_data:
   redis_data:
+  grafana_data:
+  loki_data:
 
 networks:
   backend:
