--- a/gateway/.env.example
+++ b/gateway/.env.example
@@ -1,7 +1,8 @@
+NAME=${GATEWAY_APP_NAME}
 HOST=${HOST}
 PORT=${GATEWAY_PORT}
-JWT_SECRET=${GATEWAY_JWT_SECRET}
+JWT_SECRET=${JWT_SECRET}
 RABBITMQ_URL=${GATEWAY_RABBITMQ_URL}
 REDIS_URL=${GATEWAY_REDIS_URL}
-CLIENT_URL=${GATEWAY_CLIENT_URL}
 NODE_ENV=${NODE_ENV}
+METRICS_TOKEN=${METRICS_TOKEN}
