--- a/docker/.env.example
+++ b/docker/.env.example
@@ -8,6 +8,11 @@ JWT_SECRET=your_jwt_secret_here_your_jwt_secret_here
 USE_LETSENCRYPT=false
 TRAEFIK_EMAIL=your-email@example.com
 
+# Logging + Metrics
+METRICS_TOKEN=your_metrics_token_here # /prometheus/prometheus.yml need change too 
+GRAFANA_USER=admin
+GRAFANA_PASSWORD=secretgrafana
+
 # Service Secrets
 REDIS_PASSWORD=secretredis
 RABBIT_USER=admin
@@ -18,13 +23,15 @@ MINIO_USER=minioadmin
 MINIO_PASSWORD=secretminio
 
 # Gateway
+GATEWAY_APP_NAME=d2msg-gateway
 GATEWAY_PORT=3000
 GATEWAY_RABBITMQ_URL=amqp://${RABBIT_USER}:${RABBIT_PASSWORD}@rabbitmq:5672
 GATEWAY_REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379
-GATEWAY_CLIENT_URL=http://localhost:5173
 
 # Auth Service
+AUTH_APP_NAME=d2msg-auth
 AUTH_PORT=3001
+AUTH_URL=http://auth-service:${AUTH_PORT}
 AUTH_RABBITMQ_URL=amqp://${RABBIT_USER}:${RABBIT_PASSWORD}@rabbitmq:5672
 AUTH_REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379
 AUTH_MONGO_URL=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongodb:27017/auth_db?authSource=admin&replicaSet=rs0
