--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -41,7 +41,7 @@ services:
       - /app/node_modules
     depends_on:
       redis:
-        condition: service_started
+        condition: service_healthy
       rabbitmq:
         condition: service_healthy
     networks:
@@ -64,7 +64,7 @@ services:
       gateway:
         condition: service_started
       redis:
-        condition: service_started
+        condition: service_healthy
       mongo:
         condition: service_healthy
     volumes:
@@ -78,6 +78,9 @@ services:
   redis:
     image: redis:7
     container_name: redis_dev
+    restart: always
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
     volumes:
       - redis_data_dev:/data
@@ -85,6 +88,12 @@ services:
       - backend
     labels:
       - "traefik.enable=false"
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli -a $REDIS_PASSWORD ping"]
+      interval: 90s
+      timeout: 30s
+      retries: 5
+      start_period: 30s
 
   mongo:
     image: mongo:6.0
@@ -183,11 +192,86 @@ services:
       - "traefik.http.routers.mongoexpress.middlewares=auth@file"
       - "traefik.http.services.mongoexpress.loadbalancer.server.port=8081"
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus_dev
+    restart: always
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    networks:
+      - backend
+    labels:
+      - "traefik.enable=false"
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --storage.tsdb.retention.time=15d
+
+  loki:
+    image: grafana/loki
+    container_name: loki_dev
+    restart: always
+    command: -config.file=/etc/loki/local-config.yaml
+    volumes:
+      - loki_data_dev:/loki
+      - ./loki/local-config.yaml:/etc/loki/local-config.yaml:ro
+    networks:
+      - backend
+    labels:
+      - "traefik.enable=false"
+
+  alloy:
+    image: grafana/alloy:latest
+    container_name: alloy_dev
+    restart: always
+    user: root
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - ./alloy/config.alloy:/etc/alloy/config.alloy:ro
+      - ./alloy/positions:/etc/alloy/positions
+    command:
+      - "run"
+      - "--server.http.listen-addr=0.0.0.0:12345"
+      - "/etc/alloy/config.alloy"
+    networks:
+      - backend
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.alloy-ui.rule=Host(`alloy.${DOMAIN}`)"
+      - "traefik.http.routers.alloy-ui.entrypoints=web"
+      - "traefik.http.routers.alloy-ui.tls=false"
+      - "traefik.http.services.alloy-ui.loadbalancer.server.port=12345"
+      - "traefik.http.routers.alloy-ui.middlewares=auth@file"
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana_dev
+    restart: always
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
+      - GF_AUTH_ANONYMOUS_ENABLED=false
+      - GF_SERVER_ROOT_URL=http://grafana.${DOMAIN}
+      - GF_USERS_ALLOW_SIGN_UP=false
+    volumes:
+      - grafana_data_dev:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning:ro
+    networks:
+      - backend
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.grafana.rule=Host(`grafana.${DOMAIN}`)"
+      - "traefik.http.routers.grafana.entrypoints=web"
+      - "traefik.http.services.grafana.loadbalancer.server.port=3000"
+      - "traefik.http.routers.grafana.tls=false"
+
 volumes:
   mongodb_data_dev:
   minio_data_dev:
   redis_data_dev:
   rabbitmq_data_dev:
+  grafana_data_dev:
+  loki_data_dev:
 
 networks:
   backend:
