--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,18 +1,24 @@
+# === Base stage ===
 FROM node:22-alpine AS base
 WORKDIR /app
 COPY package*.json ./
-
 RUN npm ci
-
 COPY . .
 
+# === Development stage ===
 FROM base AS development
+# Копируем entrypoint для обновления зависимостей
+COPY entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
 EXPOSE 3000
+ENTRYPOINT ["/app/entrypoint.sh"]
 CMD ["npm", "run", "dev"]
 
+# === Build stage ===
 FROM base AS build
 RUN npm run build
 
+# === Production stage ===
 FROM node:22-alpine AS production
 WORKDIR /app
 COPY package*.json ./
