--- a/gateway/package.json
+++ b/gateway/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "@fastify/helmet": "^13.0.1",
+    "@fastify/http-proxy": "^11.3.0",
     "@socket.io/redis-adapter": "^8.3.0",
     "amqplib": "^0.10.8",
     "dotenv": "^17.2.0",
     "fastify": "^5.4.0",
     "jsonwebtoken": "^9.0.2",
+    "prom-client": "^15.1.3",
     "redis": "^5.6.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
