--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -10,10 +10,14 @@
   },
   "type": "module",
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Denis Zakharov",
+    "email": "lolilegalst@gmail.com"
+  },
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@d2msg/schemas": "file:../shared/schemas",
     "@fastify/cors": "^11.0.1",
     "@fastify/helmet": "^13.0.1",
     "@prisma/client": "^6.12.0",
@@ -26,7 +30,7 @@
     "redis": "^5.6.0",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0",
-    "zod": "^4.0.5"
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
