--- a/gateway/package.json
+++ b/gateway/package.json
@@ -10,10 +10,14 @@
   },
   "type": "module",
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Denis Zakharov",
+    "email": "lolilegalst@gmail.com"
+  },
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@d2msg/schemas": "file:../shared/schemas",
     "@fastify/cors": "^11.0.1",
     "@fastify/helmet": "^13.0.1",
     "@fastify/http-proxy": "^11.3.0",
